# xkcd_retriever

./: Cargo.toml  Makefile  xkcd_retriever.py
src/: main.rs
src/routes/: get.rs  http_404_handler.rs  mod.rs  post.rs
templates/: 404.html  form.html
