[package]
name = "xkcd_retriever"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
awc = { version = "3.7.0", features = ["rustls"] }
serde = { version = "1.0.219", features = [ "derive"] }
